Добавлено много чего

--- a/Client/MainWindow.xaml
+++ b/Client/MainWindow.xaml
@@ -5,22 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Client" xmlns:hc="https://handyorg.github.io/handycontrol"
         mc:Ignorable="d"
-        Title="MainWindow" Height="720" Width="1245" WindowState="Maximized"
-        DataContext="{Binding RelativeSource={RelativeSource Self}}">
-    <Window.Resources>
-        <Style TargetType="RadioButton">
-            <Setter Property="HorizontalAlignment" Value="Left"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="Margin" Value="5"/>
-        </Style>
-    </Window.Resources>
+        Title="MainWindow" Height="720" Width="1245" WindowState="Maximized">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="250"></RowDefinition>
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0">
+        <Grid Grid.Row="0" Margin="5">
             <Grid.RowDefinitions>
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
@@ -33,18 +25,19 @@
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0" Margin="5">
-                <RadioButton x:Name="AllRB" GroupName="Periods" Content="Все" Checked="AllRB_Checked"/>
-            </StackPanel>
+            <RadioButton x:Name="AllRB" GroupName="Periods" Content="Все" Checked="AllRB_Checked"  Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left"/>
 
-            <RadioButton x:Name="PeriodsRB" GroupName="Periods" Grid.Row="1" Grid.Column="0">
+            <RadioButton x:Name="PeriodsRB" GroupName="Periods" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left">
                 <StackPanel Orientation="Horizontal">
-                    <ComboBox x:Name="PeriodsCB" IsEditable="False" IsEnabled="{Binding Path=IsChecked, ElementName=PeriodsRB}" MinWidth="120" BorderBrush="Black" Background="White" SelectionChanged="PeriodsCB_SelectionChanged"/>
+                    <ComboBox x:Name="PeriodsCB" ItemsSource="{Binding periods}" DisplayMemberPath="naim" IsEditable="False" IsEnabled="{Binding Path=IsChecked, ElementName=PeriodsRB}" MinWidth="150" BorderBrush="Black" Background="White" SelectionChanged="PeriodsCB_SelectionChanged"  MinHeight="20" Height="23" Padding="3,3,3,3"/>
                 </StackPanel>
             </RadioButton>
 
-            <RadioButton x:Name="DayRB" GroupName="Periods" Grid.Row="2" Grid.Column="0" IsChecked="True">
+            <RadioButton x:Name="DayRB" GroupName="Periods" Grid.Row="2" Grid.Column="0" IsChecked="True" HorizontalAlignment="Left">
                 <StackPanel Orientation="Horizontal">
                     <DatePicker x:Name="DayDP"  IsEnabled="{Binding Path=IsChecked, ElementName=DayRB}" FirstDayOfWeek="Monday" MinWidth="120" SelectedDateChanged="DayDP_SelectedDateChanged" BorderBrush="Black"/>
 
@@ -53,7 +46,7 @@
                 </StackPanel>
             </RadioButton>
 
-            <RadioButton x:Name="DaysRB" GroupName="Periods" Grid.Row="3" Grid.Column="0">
+            <RadioButton x:Name="DaysRB" GroupName="Periods" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Left">
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="с " VerticalAlignment="Center"/>
                     <DatePicker x:Name="DayStartDP"  IsEnabled="{Binding Path=IsChecked, ElementName=DaysRB}" FirstDayOfWeek="Monday" IsTodayHighlighted="True" MinWidth="120" SelectedDateChanged="DayStartDP_SelectedDateChanged" BorderBrush="Black"/>
@@ -64,19 +57,44 @@
 
 
 
-            <RadioButton x:Name="MonthRB" GroupName="Periods" Grid.Row="4" Grid.Column="0">
+            <RadioButton x:Name="MonthRB" GroupName="Periods" Grid.Row="4" Grid.Column="0" HorizontalAlignment="Left">
                 <StackPanel Orientation="Horizontal">
-                    <ComboBox x:Name="MonthCB" IsEditable="False" IsEnabled="{Binding Path=IsChecked, ElementName=MonthRB}" MinWidth="120" SelectionChanged="MonthCB_SelectionChanged" BorderBrush="Black"/>
+                    <ComboBox x:Name="MonthCB" IsEditable="False" IsEnabled="{Binding Path=IsChecked, ElementName=MonthRB}" MinWidth="120" SelectionChanged="MonthCB_SelectionChanged" BorderBrush="Black" MinHeight="20" Height="23" Padding="3,3,3,3"/>
                 </StackPanel>
             </RadioButton>
 
+            <hc:SearchBar Grid.Column="1" Grid.Row="0" BorderBrush="Black" x:Name="SearchTB" TextChanged="SearchBar_TextChanged" />
 
-            <Button x:Name="saveButton" Content="Сохранить" Click="saveButton_Click" Grid.Column="1" ></Button>
+            
 
+            <ToolBar Grid.Row="5">
+                <Button x:Name="AddBN" Content="Добавить" Grid.Column="1" Grid.Row="3" Click="AddBN_Click"/>
+                <hc:Divider Orientation="Vertical" Width="25" LineStroke="#FF0033FF"/>
+                <Button x:Name="SaveBN" Content="Сохранить" Grid.Column="1" Grid.Row="2" Click="SaveBN_Click"/>
+            </ToolBar>
 
+            <StackPanel Grid.Row="0" Grid.Column="3" Margin="5 0">
+                <TextBlock Text="Менеджер"/>
+                <ComboBox x:Name="ManagerCB" IsEditable="False" MinHeight="20" Height="23" Padding="3,3,3,3"/>
+            </StackPanel>
 
-            <DatePicker x:Name="dateStart" Grid.Row="1" SelectedDateChanged="dateStart_SelectedDateChanged" Grid.Column="1" />
-            <DatePicker x:Name="dateEnd" Grid.Row="2" Grid.Column="1" />
+            <StackPanel Grid.Row="1" Grid.Column="3" Margin="5 0">
+                <TextBlock Text="Тип оплаты"/>
+                <ComboBox x:Name="TipOplatyCB" IsEditable="False" MinHeight="20" Height="23" Padding="3,3,3,3"/>
+            </StackPanel>
+
+            <StackPanel Grid.Row="0" Grid.Column="4" Margin="5 0">
+                <TextBlock Text="Отгружено"/>
+                <ComboBox x:Name="OtgruzhenoCB" IsEditable="False" MinHeight="20" Height="23" Padding="3,3,3,3"/>
+            </StackPanel>
+
+            <StackPanel Grid.Row="1" Grid.Column="4" Margin="5 0">
+                <TextBlock Text="Товар оплачен"/>
+                <ComboBox x:Name="OplachenCB" IsEditable="False" MinHeight="20" Height="23" Padding="3,3,3,3"/>
+            </StackPanel>
+
+            <!--<hc:PropertyGrid Panel.ZIndex="999" Width="500" SelectedObject="{Binding DemoModel}" Grid.Column="2" Grid.Row="0" Grid.RowSpan="4" x:Name="prop" MaxTitleWidth="197" ShowSortButton="False"/>
+-->
         </Grid>
 
 
@@ -85,19 +103,19 @@
         <DataGrid x:Name="datagridRashods" AutoGenerateColumns="False" Grid.Row="1" ItemsSource="{Binding Path=rashods, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}" CanUserAddRows="False" MouseDoubleClick="datagridRashods_MoseDoubleClick">
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding kod_zap}" Header="Код" x:Name="kod_zap" Visibility="Collapsed"></DataGridTextColumn>
-                <DataGridTextColumn Binding="{Binding nom_rash}" Header="№" x:Name="nom_rash" IsReadOnly="True"></DataGridTextColumn>
-                <DataGridTextColumn Binding="{Binding data_rash, StringFormat=dd.MM.yyyy}" Header="Дата" x:Name="data_rash" IsReadOnly="True"></DataGridTextColumn>
-                <DataGridTextColumn Binding="{Binding data_otgruzki, StringFormat=dd.MM.yyyy}" Header="Дата отгр." x:Name="data_otgr" IsReadOnly="True"></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Nom_rash}" Header="№" x:Name="nom_rash" IsReadOnly="True"></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Data_rash, StringFormat=dd.MM.yyyy}" Header="Дата" x:Name="data_rash" IsReadOnly="True"></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Data_otgruzki, StringFormat=dd.MM.yyyy}" Header="Дата отгр." x:Name="data_otgr" IsReadOnly="True"></DataGridTextColumn>
                 <DataGridTextColumn Binding="{Binding Otpustil}" Header="Отпустил" x:Name="otgr" IsReadOnly="True"></DataGridTextColumn>
-                <DataGridTextColumn Binding="{Binding prim}" Header="Прим" x:Name="prim"></DataGridTextColumn>
-                <DataGridCheckBoxColumn Binding="{Binding isTovOpl}" Header="Товар оплачен" x:Name="oplach"/>
-                <DataGridCheckBoxColumn Binding="{Binding isTovOpl}" Header="Товар оплачен" x:Name="dost_oplach"/>
-                <DataGridCheckBoxColumn Binding="{Binding otgruzheno}" Header="Отгружено" x:Name="otgruz"/>
+                <DataGridTextColumn Binding="{Binding Prim}" Header="Прим" x:Name="prim"></DataGridTextColumn>
+                <DataGridCheckBoxColumn Binding="{Binding IsTovOpl}" Header="Товар оплачен" x:Name="oplach"/>
+                <DataGridCheckBoxColumn Binding="{Binding IsDostOpl}" Header="Дост. опл" x:Name="oplach_dost"/>
+                <DataGridCheckBoxColumn Binding="{Binding Otgruzheno}" Header="Отгружено" x:Name="otgruz"/>
                 <DataGridTextColumn Binding="{Binding Sheta.nom_1C}" Header="Счет" x:Name="shet" IsReadOnly="True"></DataGridTextColumn>
-                <DataGridTextColumn Binding="{Binding summa, StringFormat=N2}" Header="Нал" x:Name="summa_nal" IsReadOnly="True"></DataGridTextColumn>
-                <DataGridTextColumn Binding="{Binding summa_karta, StringFormat=N2}" Header="Карта" x:Name="summa_karta" IsReadOnly="True"></DataGridTextColumn>
-                <DataGridTextColumn Binding="{Binding summa_beznal, StringFormat=N2}" Header="Безнал" x:Name="summa_beznal" IsReadOnly="True"></DataGridTextColumn>
-                <DataGridTextColumn Binding="{Binding dolg, StringFormat=N2}" Header="Долг" x:Name="summa_dolg" IsReadOnly="True"></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Summa, StringFormat=N2}" Header="Нал" x:Name="summa_nal" IsReadOnly="True"></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Summa_karta, StringFormat=N2}" Header="Карта" x:Name="summa_karta" IsReadOnly="True"></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Summa_beznal, StringFormat=N2}" Header="Безнал" x:Name="summa_beznal" IsReadOnly="True"></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Dolg, StringFormat=N2}" Header="Долг" x:Name="summa_dolg" IsReadOnly="True"></DataGridTextColumn>
                 <DataGridTextColumn Binding="{Binding Spr_oplat_sklad.naim}" Header="Оплата" x:Name="oplata"></DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
